--- a/index.html
+++ b/index.html
@@ -1,42 +1,61 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Little Love</title>
+	<title>Our Love Story</title>
 	
 	<style type="text/css">
 		@font-face {
 			font-family: digit;
-			src: url('./etun/digital-7_mono.ttf') format("truetype");
+			src: url('./static/digital-7_mono.ttf') format("truetype");
 		}
 	</style>
-	<link href="./etun/default.css" type="text/css" rel="stylesheet">
-	<script type="text/javascript" src="./etun/jquery.js"></script>
-	<script type="text/javascript" src="./etun/garden.js"></script>
-    <script type="text/javascript" src="./etun/functions.js"></script>
+	<link href="./static/default.css" type="text/css" rel="stylesheet">
+	<script type="text/javascript" src="./static/jquery.js"></script>
+	<script type="text/javascript" src="./static/garden.js"></script>
+    <script type="text/javascript" src="./static/functions.js"></script>
 </head>
 
 <body>
 	<div id="mainDiv">
 		<div id="content" style="width: 1110px; height: 625px; margin-top: 185px; margin-left: 405px;">
 			<div id="code" style="margin-top: 112.5px;">
-				<span class="keyword">那一天，我牵起了你的手</span><br>
-				<br>
-				<span class="keyword">我被你的温柔可爱所折服</span><br>
-				<br>
-				<span class="keyword">从那一刻起，我决定不在放手</span><br>
-				<br>
-				<span class="keyword">就这样，和你一直走下去</span><br>
-				<br>
+				<span class="comments">/**</span><br>
+				<span class="space"><span class="comments">* We are both Guoguan USer,</span><br>
+				<span class="space"><span class="comments">* and we both learned English and I am a programmer,</span><br>
+				<span class="space"><span class="comments">* so I write some code to celebrate our anniversaries.</span><br>
+				<span class="space"><span class="comments">*/</span><br>
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"bloodlyQin"</span>);<br>
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"vickyTang"</span>);<br>
+				<span class="comments">// Apr 13, 2007, I told you I love you. </span><br>
+				i.love(u);<br>
+				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br>
+				u.accepted();<br>
+				<span class="comments">// Since then, I miss u every day.</span><br>
+				i.miss(u);<br>
+				<span class="comments">// And take care of u and our love.</span><br>
+				i.takeCareOf(u);<br>
+				<span class="comments">// You say that you won't be so easy to marry me.</span><br>
+				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br>
+				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br>
+				<span class="keyword">while</span> (isHesitate) {<br>
+				<span class="placeholder">i.waitFor(u);<br>
+				<span class="placeholder"><span class="comments">// I think it is an important decision</span><br>
+				<span class="placeholder"><span class="comments">// and you should think it over.</span><br>
+				<span class="placeholder">isHesitate = u.thinkOver();<br>
+				}<br>
+				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br>
+				i.marry(u);<br>
+				i.liveHappilyWith(u);<br>
 			</span></span></span></span></span></span></span>_</div>
 			<div id="loveHeart">
 				<canvas id="garden" width="670" height="625"></canvas>
 				<div id="words" style="position: absolute; top: 380px; left: 915px;">
 					<div id="messages" style="display: block;">
-						病娇, 我们在一起已经
-						<div id="elapseClock"><span class="digit">973</span> 天 <span class="digit">13</span> 小时 <span class="digit">37</span> 分钟 <span class="digit">40</span> 秒</div>
+						vickyTang, I have fallen in love with you for
+						<div id="elapseClock"><span class="digit">973</span> days <span class="digit">13</span> hours <span class="digit">37</span> minutes <span class="digit">40</span> seconds</div>
 					</div>
 					<div id="loveu" style="display: block;">
-						我永远永远爱你.<br>
-						<div class="signature">- 恶豚</div>
+						Love u forever and ever.<br>
+						<div class="signature">- bloodlyQin</div>
 					</div>
 				</div>
 			</div>
