--- a/index.html
+++ b/index.html
@@ -8,62 +8,291 @@
 			src: url('./static/digital-7_mono.ttf') format("truetype");
 		}
 	</style>
+	<link rel="stylesheet" type="text/css" href="./static/lib/arctext_style.css" />
 	<link href="./static/default.css" type="text/css" rel="stylesheet">
+	<link href="./static/lib/scrollpath.css" type="text/css" rel="stylesheet">
+	<link href="./static/lib/MetroJs.min.css" type="text/css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="./static/lib/component.css" />
+	<link href="./static/style.css" type="text/css" rel="stylesheet">
+	<link href="./static/lib/style_circle.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="./static/jquery.js"></script>
+	<script src="./static/lib/modernizr.custom.js"></script>
 	<script type="text/javascript" src="./static/garden.js"></script>
-    <script type="text/javascript" src="./static/functions.js"></script>
+    <script type="text/javascript" src="./static/jquery.lazyload.min.js"></script>
+	<script type="text/javascript" src="./static/lib/jquery.easing.js"></script>
+	<script type="text/javascript" src="./static/lib/jquery.scrollpath.min.js"></script>
+	<script type="text/javascript" src="./static/lib/MetroJs.min.js"></script>
+	<script type="text/javascript" src="./static/functions.js"></script>
 </head>
 
 <body>
-	<div id="mainDiv">
-		<div id="content" style="width: 1110px; height: 625px; margin-top: 185px; margin-left: 405px;">
-			<div id="code" style="margin-top: 112.5px;">
-				<span class="comments">/**</span><br>
-				<span class="space"><span class="comments">* We are both Guoguan USer,</span><br>
-				<span class="space"><span class="comments">* and we both learned English and I am a programmer,</span><br>
-				<span class="space"><span class="comments">* so I write some code to celebrate our anniversaries.</span><br>
-				<span class="space"><span class="comments">*/</span><br>
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"bloodlyQin"</span>);<br>
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"vickyTang"</span>);<br>
-				<span class="comments">// Apr 13, 2007, I told you I love you. </span><br>
-				i.love(u);<br>
-				<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br>
-				u.accepted();<br>
-				<span class="comments">// Since then, I miss u every day.</span><br>
-				i.miss(u);<br>
-				<span class="comments">// And take care of u and our love.</span><br>
-				i.takeCareOf(u);<br>
-				<span class="comments">// You say that you won't be so easy to marry me.</span><br>
-				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br>
-				<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br>
-				<span class="keyword">while</span> (isHesitate) {<br>
-				<span class="placeholder">i.waitFor(u);<br>
-				<span class="placeholder"><span class="comments">// I think it is an important decision</span><br>
-				<span class="placeholder"><span class="comments">// and you should think it over.</span><br>
-				<span class="placeholder">isHesitate = u.thinkOver();<br>
-				}<br>
-				<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br>
-				i.marry(u);<br>
-				i.liveHappilyWith(u);<br>
-			</span></span></span></span></span></span></span>_</div>
-			<div id="loveHeart">
-				<canvas id="garden" width="670" height="625"></canvas>
-				<div id="words" style="position: absolute; top: 380px; left: 915px;">
-					<div id="messages" style="display: block;">
-						vickyTang, I have fallen in love with you for
-						<div id="elapseClock"><span class="digit">973</span> days <span class="digit">13</span> hours <span class="digit">37</span> minutes <span class="digit">40</span> seconds</div>
+	<nav>
+		<ul>
+			<a href="#start"><li class="page_1">A</li></a>
+			<a href="#description"><li class="page_2">B</li></a>
+			<a href="#scrollbar"><li class="page_4">C</li></a>
+			<a href="#rotations"><li class="page_5">D</li></a>
+			<a href="#rotations-rotated"><li class="page_6">E</li></a>
+			<a href="#source"><li class="page_7">F</li></a>
+			<a href="#follow"><li class="page_8">G</li></a>
+		</ul>
+	</nav>
+	<div class="wrapper">
+			<div class="demo dpage">
+				<div id="mainDiv">
+					<div id="content">
+						<div id="code">
+							<span class="comments">/**</span><br>
+							<span class="space"><span class="comments">* We are both Guoguan USer,</span><br>
+							<span class="space"><span class="comments">* and we both learned English and I am a programmer,</span><br>
+							<span class="space"><span class="comments">* so I write some code to celebrate our anniversaries.</span><br>
+							<span class="space"><span class="comments">*/</span><br>
+							Boy i = <span class="keyword">new</span> Boy(<span class="string">"bloodlyQin"</span>);<br>
+							Girl u = <span class="keyword">new</span> Girl(<span class="string">"vickyTang"</span>);<br>
+							<span class="comments">// Apr 13, 2007, I told you I love you. </span><br>
+							i.love(u);<br>
+							<span class="comments">// Luckily, you accepted and became my girlfriend eversince.</span><br>
+							u.accepted();<br>
+							<span class="comments">// Since then, I miss u every day.</span><br>
+							i.miss(u);<br>
+							<span class="comments">// And take care of u and our love.</span><br>
+							i.takeCareOf(u);<br>
+							<span class="comments">// You say that you won't be so easy to marry me.</span><br>
+							<span class="comments">// So I keep waiting and I have confidence that you will.</span><br>
+							<span class="keyword">boolean</span> isHesitate = <span class="keyword">true</span>;<br>
+							<span class="keyword">while</span> (isHesitate) {<br>
+							<span class="placeholder">i.waitFor(u);<br>
+							<span class="placeholder"><span class="comments">// I think it is an important decision</span><br>
+							<span class="placeholder"><span class="comments">// and you should think it over.</span><br>
+							<span class="placeholder">isHesitate = u.thinkOver();<br>
+							}<br>
+								<span class="comments">// After a romantic wedding, we will live happily ever after.</span><br>
+							i.marry(u);<br>
+							i.liveHappilyWith(u);<br>
+							</span></span></span></span></span></span></span>_</div>
+						<div id="loveHeart">
+							<canvas id="garden"></canvas>
+							<div id="words" >
+								<div id="messages">
+									Vicky, I have fallen in love with u for
+									<div id="elapseClock"><span class="digit">973</span> days <span class="digit">13</span> hours <span class="digit">37</span> minutes <span class="digit">40</span> seconds</div>
+								</div>
+								<div id="loveu">
+									Love u forever and ever.<br>
+									<div class="signature">- BlOoDlY</div>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div id="loveu" style="display: block;">
-						Love u forever and ever.<br>
-						<div class="signature">- bloodlyQin</div>
+				</div>
+				<div class="mlls"><img src="./static/img/monlarissa_m.png"/></div>
+				<div class="notice">↓↓ Scroll me ↓↓</div>
+			</div>
+			
+			<div class="description dpage">
+				<div class="radio_word_1">
+					<h3 id="radio_word_1">Happy Birthday!</h3>
+				</div>
+
+				<div id="fc-slideshow" class="fc-slideshow">
+					<ul class="fc-slides">
+						<li><img src="./static/img/fc_1.jpg" /><h3>史迪奇.汤</h3></li>
+						<li><img src="./static/img/fc_2.jpg" /><h3>爱吃吃.汤</h3></li>
+						<li><img src="./static/img/fc_3.jpg" /><h3>典雅.汤</h3></li>
+						<li><img src="./static/img/fc_4.jpg" /><h3>臭美.汤</h3></li>
+						<li><img src="./static/img/fc_5.jpg" /><h3>再吃一个？</h3></li>
+						<li><img src="./static/img/fc_6.jpg" /><h3>SunFlower</h3></li>
+						<li><img src="./static/img/fc_7.jpg" /><h3>刚睡醒~</h3></li>
+						<li><img src="./static/img/fc_8.jpg" /><h3>卖萌.汤</h3></li>
+					</ul>
+				</div>
+				<div class="radio_word_2">
+					<h3 id="radio_word_2">Lovely Vicky!</h3>
+				</div>
+
+			</div>
+			<!-- description end -->
+
+			<div class="syntax dpage">
+				<div class="ip-slideshow"></div>
+			</div>
+
+			<div class="scrollbar dpage">
+				<div class="tiles red">
+				    <div id="tile1" class="live-tile" data-delay="3500" data-initdelay="400">        
+				        <div>
+				        	<a href="#"><img class="full" src="./static/img/pw_01.jpg" alt="first" /></a>
+				        	<span class="tile-title">You & me</span>
+				        </div>
+				        <div>
+				        	<p>哎哎好多人？~
+				            	<span class="tile-title">friends</span>
+				            </p>
+				        </div>
+				    </div>
+				    <div id="tile2" class="live-tile" data-direction="horizontal" data-initdelay="500" data-delay="4400">     
+				        <div>
+				            <img class="full" src="./static/img/pw_02.jpg" alt="first" />
+				        </div>
+				        <div>
+				            <img class="full" src="./static/img/pw_03.jpg" alt="first" />
+				        </div>   
+				    </div>
+				    <div id="tile3" class="live-tile">     
+				        <div>
+				            <a href="#"><img class="full" src="./static/img/pw_s_01.jpg" alt="first" /></a>
+				        </div>
+				    </div>
+				    <div id="tile4" class="live-tile" data-direction="vertical" data-initdelay="500" data-delay="6500">     
+				        <div>
+				            <img class="full" src="./static/img/pw_04.jpg" alt="first" />
+				        </div>
+				        <div>
+				            <img class="full" src="./static/img/pw_05.jpg" alt="first" />
+				        </div>   
+				    </div>
+				    <div id="tile5" class="live-tile" data-direction="vertical" data-initdelay="500" data-delay="3400">     
+				        <div>
+				            <img class="full" src="./static/img/pw_06.jpg" alt="first" />
+				        </div>
+				        <div>
+				            <img class="full" src="./static/img/pw_07.jpg" alt="first" />
+				        </div>   
+				    </div>
+				    <div id="tile6" class="live-tile" data-direction="horizontal" data-initdelay="500" data-delay="2200">     
+				        <div>
+				            <a href="#"><img class="full" src="./static/img/pw_s_02.jpg" alt="first" /></a>
+				        </div>   
+				    </div>
+				    <div class="list-tile">
+    				    <ul id="tile7" class="flip-list fourTiles" data-initdelay="500" data-mode="flip-list" data-delay="2800">
+    				        <li>
+    				            <div class="myClass"><img src="./static/img/pw_f4_01.jpg"/></div>
+    				            <div><img src="./static/img/pw_f4_05.jpg"/></div>
+    				        </li>
+    				        <li>
+    				            <div class="myClass"><img src="./static/img/pw_f4_02.jpg"/></div>
+    				            <div><img src="./static/img/pw_f4_06.jpg"/></div>
+    				        </li>
+    				        <li>
+    				            <div class="myClass"><img src="./static/img/pw_f4_03.jpg"/></div>
+    				            <div><img src="./static/img/pw_f4_07.jpg"/></div>
+    				        </li>
+    				        <li data-direction="horizontal">
+    				            <div class="myClass"><img src="./static/img/pw_f4_04.jpg"/></div>
+    				            <div><img src="./static/img/pw_f4_08.jpg"/></div>
+    				        </li>
+    				    </ul>
+    				</div>
+				    <div id="tile8" class="live-tile" data-direction="horizontal" data-initdelay="500" data-delay="4200">     
+				        <div>
+				            <a href="#"><img class="full" src="./static/img/pw_s_03.jpg" alt="first" /></a>
+				        </div>   
+				    </div>
+				    <div id="tile9" class="live-tile" data-direction="vertical" data-initdelay="500" data-delay="5100">     
+				        <div>
+				            <a href="#"><img class="full" src="./static/img/pw_s_04.jpg" alt="first" /></a>
+				        </div>   
+				    </div>
+				    <div class="list-tile">
+    				    <ul id="tile10" class="flip-list fourTiles" data-initdelay="500" data-mode="flip-list" data-delay="3500">
+    				        <li>
+    				            <div class="myClass"><img src="./static/img/pw_b4_01.jpg"/></div>
+    				            <div><img src="./static/img/pw_b4_05.jpg"/></div>
+    				        </li>
+    				        <li>
+    				            <div class="myClass"><img src="./static/img/pw_b4_02.jpg"/></div>
+    				            <div><img src="./static/img/pw_b4_06.jpg"/></div>
+    				        </li>
+    				        <li>
+    				            <div class="myClass"><img src="./static/img/pw_b4_03.jpg"/></div>
+    				            <div><img src="./static/img/pw_b4_07.jpg"/></div>
+    				        </li>
+    				        <li data-direction="horizontal">
+    				            <div class="myClass"><img src="./static/img/pw_b4_04.jpg"/></div>
+    				            <div><img src="./static/img/pw_b4_08.jpg"/></div>
+    				        </li>
+    				    </ul>
+    				</div>
+				    <div id="tile11" class="live-tile" data-direction="horizontal" data-initdelay="500" data-delay="3500">     
+				        <div>
+				            <a href="#"><img class="full" src="./static/img/pw_s_05.jpg" alt="first" /></a>
+				        </div>   
+				    </div>
+				    <div id="tile12" class="live-tile" data-direction="vertical" data-initdelay="500" data-delay="4700">     
+				        <div>
+				            <img class="full" src="./static/img/pw_08.jpg" alt="first" />
+				        </div>
+				        <div>
+				            <img class="full" src="./static/img/pw_09.jpg" alt="first" />
+				        </div>   
+				    </div>
+				    <div id="tile13" class="live-tile" data-direction="horizontal" data-initdelay="500" data-delay="6100">     
+				        <div>
+				            <img class="full" src="./static/img/pw_10.jpg" alt="first" />
+				        </div>
+				        <div>
+				            <img class="full" src="./static/img/pw_11.jpg" alt="first" />
+				        </div>   
+				    </div>
+				    <div id="tile14" class="live-tile" data-direction="horizontal" data-initdelay="500" data-delay="5600">     
+				        <div>
+				            <a href="#"><img class="full" src="./static/img/pw_s_06.jpg" alt="first" /></a>
+				        </div>   
+				    </div>
+				    <div id="tile15" class="live-tile" data-direction="horizontal" data-initdelay="500" data-delay="4200">     
+				        <div>
+				            <img class="full" src="./static/img/pw_12.jpg" alt="first" />
+				        </div>
+				        <div>
+				            <img class="full" src="./static/img/pw_13.jpg" alt="first" />
+				        </div>   
+				    </div>
+				    <div id="tile16" class="live-tile" data-direction="horizontal" data-initdelay="500" data-delay="3300">     
+				        <div>
+				            <img class="full" src="./static/img/pw_14.jpg" alt="first" />
+				        </div>
+				    </div>
+				</div>
+			</div>
+
+			<div class="rotations dpage">
+				<div class="bns">
+					<img src="./static/img/bn_s.jpg"/>
+				</div>
+				<div class="bnm">
+					<img src="./static/img/bn_m.jpg"/>
+				</div>
+				<div id="bns_say">"Happy birthday 26 ~"</div>
+				<div id="bnm_say">"Grinning all the time"</div>
+			</div>
+
+			<div class="source dpage">
+			    <div id="source_div">
+					<div class="circle circle_1">
+						<img src="./static/img/circle_01.jpg"/>
+					</div>
+					<div class="circle circle_2">
+						<img src="./static/img/circle_02.jpg"/>
+					</div>
+					<div class="circle circle_3">
+						<img src="./static/img/circle_03.jpg"/>
+					</div>
+					<div class="circle circle_4">
+						<img src="./static/img/circle_04.jpg"/>
+					</div>
+					<div class="circle circle_5">
+						<img src="./static/img/circle_05.jpg"/>
 					</div>
 				</div>
 			</div>
+			<div class="follow dpage">
+				<div id="allright">
+					Power By many many thing<br/>
+					BlOoDlY All Rights Reserved
+				</div>
+			</div>
 		</div>
-		<div id="copyright">
-			I love you forever.
-		</div>
-	</div>
 	<script type="text/javascript">
 		var offsetX = $("#loveHeart").width() / 2;
 		var offsetY = $("#loveHeart").height() / 2 - 55;
@@ -80,8 +309,6 @@
 			msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+"; 
 			document.body.appendChild(msg);
 			$("#code").css("display", "none")
-			$("#copyright").css("position", "absolute");
-			$("#copyright").css("bottom", "10px");
 		    document.execCommand("stop");
 		} else {
 			setTimeout(function () {
@@ -93,10 +320,21 @@
 			setInterval(function () {
 				timeElapse(together);
 			}, 500);
-
 			adjustCodePosition();
 			$("#code").typewriter();
 		}
+
+	</script>
+	<script src="./static/lib/jquery.flipshow.js"></script>
+	<script src="./static/lib/jquery.arctext.js" type="text/javascript"></script>
+	<script src="./static/lib/particlesSlideshow.js" type="text/javascript"></script>
+	<script>
+		$( function() {
+			
+			$("#radio_word_1").arctext({radius: 250, rotate: false})
+			$("#radio_word_2").arctext({radius: 250, dir: -1})
+
+		} );
 	</script>
 </body>
 </html>
