--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			src: url('./static/digital-7_mono.ttf') format("truetype");
 		}
 	</style>
+	<link rel="shortcut icon" href="favicon.ico"> 
 	<link rel="stylesheet" type="text/css" href="./static/lib/arctext_style.css" />
 	<link href="./static/default.css" type="text/css" rel="stylesheet">
 	<link href="./static/lib/scrollpath.css" type="text/css" rel="stylesheet">
