--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
 	<script>
 		$( function() {
 			
-			$("#radio_word_1").arctext({radius: 250, rotate: false})
-			$("#radio_word_2").arctext({radius: 250, dir: -1})
+			$("#radio_word_1").arctext({radius: 250, rotate: false});
+			$("#radio_word_2").arctext({radius: 250, dir: -1});
 
 		} );
 	</script>
