--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 			<div class="follow dpage">
 				<div id="allright">
 					Power By many many thing<br/>
-					BlOoDlY All Rights Reserved
+					BlOoDlY All Rights Reserved<br/>
 				</div>
 			</div>
 		</div>
