去掉版权声明
去掉版权声明

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 			<div class="follow dpage">
 				<div id="allright">
 					Power By many many thing<br/>
-					BlOoDlY All Rights Reserved<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Build by bloodly<br/>
 				</div>
 			</div>
 		</div>
