--- a/index.html
+++ b/index.html
@@ -337,5 +337,9 @@
 
 		} );
 	</script>
+	<script type="text/javascript">
+	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fc5b15eb952ad20c6fe933bb6393a0725' 	type='text/javascript'%3E%3C/script%3E"));
+	</script>
 </body>
 </html>
