--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>FoeverLove</title>
-	
+	<meta name="keywords" content="秦一民,汤雯">
+	<meta name="description" content="这是一个记录秦一民和汤雯爱情长跑的主页">
+	<meta name="auther" content="Bloodly">
+
 	<style type="text/css">
 		@font-face {
 			font-family: digit;
@@ -86,7 +89,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="mlls"><img src="./static/img/monlarissa_m.png"/></div>
+				<div class="mlls"><img src="./static/img/monlarissa_m.png" alt="look down"/></div>
 				<div class="notice">↓↓ Scroll me ↓↓</div>
 			</div>
 			
@@ -97,14 +100,14 @@
 
 				<div id="fc-slideshow" class="fc-slideshow">
 					<ul class="fc-slides">
-						<li><img src="./static/img/fc_1.jpg" /><h3>史迪奇.汤</h3></li>
-						<li><img src="./static/img/fc_2.jpg" /><h3>爱吃吃.汤</h3></li>
-						<li><img src="./static/img/fc_3.jpg" /><h3>典雅.汤</h3></li>
-						<li><img src="./static/img/fc_4.jpg" /><h3>臭美.汤</h3></li>
-						<li><img src="./static/img/fc_5.jpg" /><h3>再吃一个？</h3></li>
-						<li><img src="./static/img/fc_6.jpg" /><h3>SunFlower</h3></li>
-						<li><img src="./static/img/fc_7.jpg" /><h3>刚睡醒~</h3></li>
-						<li><img src="./static/img/fc_8.jpg" /><h3>卖萌.汤</h3></li>
+						<li><img src="./static/img/fc_1.jpg" alt="萌萌的史迪奇小汤雯"/><h3>史迪奇.汤</h3></li>
+						<li><img src="./static/img/fc_2.jpg" alt="这家伙就是一个大吃货"/><h3>爱吃吃.汤</h3></li>
+						<li><img src="./static/img/fc_3.jpg" alt="文静的时候很文静"/><h3>典雅.汤</h3></li>
+						<li><img src="./static/img/fc_4.jpg" alt="闷骚的时候也很闷骚"/><h3>臭美.汤</h3></li>
+						<li><img src="./static/img/fc_5.jpg" alt="不过总之还是一个吃货look down"/><h3>再吃一个？</h3></li>
+						<li><img src="./static/img/fc_6.jpg" alt="喜欢阳光"/><h3>SunFlower</h3></li>
+						<li><img src="./static/img/fc_7.jpg" alt="不过还是最爱睡觉"/><h3>刚睡醒~</h3></li>
+						<li><img src="./static/img/fc_8.jpg" alt="不管长多大都是一个萌货"/><h3>卖萌.汤</h3></li>
 					</ul>
 				</div>
 				<div class="radio_word_2">
