要是有人想给我发邮件怎么办？
加个邮箱联系方式吧

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 			<div class="follow dpage">
 				<div id="allright">
 					Power By many many thing<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Build by bloodly<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Build by <a href="mailto:mmwyw@126.com">bloodly</a><br/>
 				</div>
 			</div>
 		</div>
