--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta name="keywords" content="秦一民,汤雯">
 	<meta name="description" content="这是一个记录秦一民和汤雯爱情长跑的主页">
 	<meta name="auther" content="Bloodly">
+	<meta http-equiv="Cache-Control" content="max-age=7200" />
 
 	<style type="text/css">
 		@font-face {
