--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="description" content="这是一个记录秦一民和汤雯爱情长跑的主页">
 	<meta name="auther" content="Bloodly">
 	<meta http-equiv="Cache-Control" content="max-age=7200" />
+	<meta http-equiv="expires" content="Tue, 03 Jan 2018 10:07:55 GMT"/> 
 
 	<style type="text/css">
 		@font-face {
