--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			<a href="#follow"><li class="page_8">G</li></a>
 		</ul>
 	</nav>
+	<img src="http://obqohhzt6.bkt.clouddn.com/2_cover.png">
 	<div class="wrapper">
 			<div class="demo dpage">
 				<div id="mainDiv">
